fix alignment issue with clickMode checkbox, resize reset button

--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ button {
     background-color: rgb(241, 241, 241);
 }
 
+#reset {
+   width: 100px; 
+}
+
 div.row {
     display: grid;
     width: 3.125%;
@@ -81,8 +85,8 @@ label {
 #clickMode {
     width: 20px;
     height: 20px;
-    margin-top: 10px;
     margin-right: 20px;
+    transform: translateY(20%);
 }
 
 div#container {
